# css_dev_manager

./: .env.example  .gitignore  DevManager.spec  README.md  build_and_release.py  dev_automator_workflow.txt  dev_manager.spec  dev_manager_workflow.txt  main.py  pyproject.toml  test_update.py  versions.json
docs/: ENCRYPTION_SYSTEM.md
scripts/: build_devautomator.py  build_devmanager.py  build_linux.sh  build_macos.sh  build_windows.bat  encrypt_constants.py  generate_compatible_token.py  generate_token.py  self_update.py  test_encryption.py  test_github_integration.py
src/: __init__.py  excel_manager.py  github_client.py  github_settings_dialog.py  gui.py  main.py  secure_config.py  token_handler.py  token_handler_compatible.py  updater.py
src/builder/: __init__.py  build_manager.py  github_manager.py  manifest_manager.py  packager.py
src/common/: __init__.py  constants.py  crypto_utils.py  encrypted_constants.py  utils.py  version.py
src/installer/: __init__.py  first_run_installer.py  install_dialog.py
src/specs/: __init__.py  devautomator.spec  devmanager.spec
